--- a/HmiPro/Profiles/Prod/Hmi.Config.Smtc.json
+++ b/HmiPro/Profiles/Prod/Hmi.Config.Smtc.json
@@ -51,7 +51,7 @@
 
   //---------连接配置---------
   "MongoConn": "mongodb://192.168.0.2:27017",
-  "MqConn": "failover:(tcp://192.168.0.2:61615,tcp://192.168.0.2:61616,tcp://192.168.0.2:61617,tcp://192.168.0.2:61618)?Randomize=false&amp;jms.prefetchPolicy.all=1",
+  "MqConn": "tcp://192.168.0.2:61615?jms.prefetchPolicy.all=1",
   "MqUserName": "admin",
   "MqUserPwd": "admin",
   "MathRound": 3,
