--- a/UnitTestPro/UnitTestPro.csproj
+++ b/UnitTestPro/UnitTestPro.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="FuncTest\ReflectTest.cs" />
     <Compile Include="FuncTest\SysFuncTest.cs" />
+    <Compile Include="Model\Protocol\SmParam\SmAnalysisTests.cs" />
     <Compile Include="TestClass.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
