--- a/UnitTestPro/UnitTestPro.csproj
+++ b/UnitTestPro/UnitTestPro.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FuncTest\ReflectTest.cs" />
