--- a/HmiPro/Profiles/Prod/Hmi.Config.Shop.json
+++ b/HmiPro/Profiles/Prod/Hmi.Config.Shop.json
@@ -58,6 +58,6 @@
   //方便区分环境
   "DevUser": "ychost,Somiar",
   "NtpIp": "192.168.88.15",
-  "InfluxDbIp": "192.168.88.15",
-  "InfluxCpmDbName": "cpm"
+  "InfluxDbIp": "192.168.88.15"
+  //"InfluxCpmDbName": "cpm"
 }
