--- a/HmiPro/HmiPro.csproj
+++ b/HmiPro/HmiPro.csproj
@@ -146,6 +146,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -200,6 +201,7 @@
     <Compile Include="Helpers\AssetsHelper.cs" />
     <Compile Include="Helpers\ConsoleHelper.cs" />
     <Compile Include="Helpers\ExceptionHelper.cs" />
+    <Compile Include="Helpers\HttpHelper.cs" />
     <Compile Include="Helpers\InfluxDbHelper.cs" />
     <Compile Include="Helpers\LoggerHelper.cs" />
     <Compile Include="Helpers\MongoHelper.cs" />
@@ -241,6 +243,7 @@
     <Compile Include="Redux\Models\ManuInfo.cs" />
     <Compile Include="Redux\Models\MqCall.cs" />
     <Compile Include="Redux\Models\AppCmd.cs" />
+    <Compile Include="Redux\Models\MqUploadElec.cs" />
     <Compile Include="Redux\Models\MqUploadRest.cs" />
     <Compile Include="Redux\Models\MqUploadDpm.cs" />
     <Compile Include="Redux\Models\PipeCmd.cs" />
@@ -286,6 +289,7 @@
     <Compile Include="ViewModels\DMes\Tab\DpmsTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\ScanMaterialTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\SchTaskTab.cs" />
+    <Compile Include="ViewModels\DMes\Tab\WireOdPieTab.cs" />
     <Compile Include="ViewModels\DxWindowViewModel.cs" />
     <Compile Include="ViewModels\Sys\FormViewModel.cs" />
     <Compile Include="ViewModels\Sys\Form\PasswordForm.cs" />
@@ -312,6 +316,9 @@
     <Compile Include="ViewModels\DMes\SchTaskAxisViewModel.cs" />
     <Compile Include="Views\DMes\TaskSelectPanel.xaml.cs">
       <DependentUpon>TaskSelectPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\DMes\WireOdPie.xaml.cs">
+      <DependentUpon>WireOdPie.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Dx\LoadingView.xaml.cs">
       <DependentUpon>LoadingView.xaml</DependentUpon>
@@ -399,6 +406,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\DMes\TaskSelectPanel.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\DMes\WireOdPie.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
