--- a/HmiPro/packages.config
+++ b/HmiPro/packages.config
@@ -1,27 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommandLineParser" version="2.1.1-beta" targetFramework="net461" />
-  <package id="Common.Logging" version="3.3.1" targetFramework="net461" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net461" />
   <package id="DnsClient" version="1.0.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net461" />
   <package id="FluentScheduler" version="5.3.0" targetFramework="net461" />
-  <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MongoDB.Bson" version="2.5.0" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.5.0" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.5.0" targetFramework="net461" />
-  <package id="NeoSmart.AsyncLock" version="0.3.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Reducto" version="0.9.4" targetFramework="net461" />
   <package id="SQLite.CodeFirst" version="1.4.0.20" targetFramework="net461" />
   <package id="System.Buffers" version="4.3.0" targetFramework="net461" />
   <package id="System.Collections" version="4.0.11-rc2-24027" targetFramework="net461" />
   <package id="System.Console" version="4.0.0-rc2-24027" targetFramework="net461" />
-  <package id="System.Data.SQLite" version="1.0.106.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Core" version="1.0.106.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.EF6" version="1.0.106.0" targetFramework="net461" />
-  <package id="System.Data.SQLite.Linq" version="1.0.106.0" targetFramework="net461" />
+  <package id="System.Data.SqlClient" version="4.4.3" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.108.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.108.0" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.0.11-rc2-24027" targetFramework="net461" />
   <package id="System.Globalization" version="4.0.11-rc2-24027" targetFramework="net461" />
   <package id="System.IO" version="4.1.0-rc2-24027" targetFramework="net461" />
