update: 完善打卡功能

--- a/HmiPro/HmiPro.csproj
+++ b/HmiPro/HmiPro.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Redux\Models\MqUploadRest.cs" />
     <Compile Include="Redux\Models\MqUploadDpm.cs" />
     <Compile Include="Redux\Models\PipeCmd.cs" />
+    <Compile Include="Redux\Models\PrintCardWithRfid.cs" />
     <Compile Include="Redux\Models\ProdProp.cs" />
     <Compile Include="Redux\Models\StartupLog.cs" />
     <Compile Include="Redux\Models\ViewStoreModels.cs" />
@@ -270,6 +271,7 @@
     <Compile Include="Redux\Services\SysService.cs" />
     <Compile Include="ViewModels\DMes\Form\CallRepairForm.cs" />
     <Compile Include="ViewModels\DMes\Form\CompleteAxisForm.cs" />
+    <Compile Include="ViewModels\DMes\Form\ConfirmEndMachine.cs" />
     <Compile Include="ViewModels\DMes\Form\PalletConfirmForm.cs" />
     <Compile Include="ViewModels\DMes\Tab\AlarmTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\BaseTab.cs" />
@@ -824,7 +826,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
     <VisualStudio>
-      <UserProperties BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_UpdateFileVersion="True" BuildVersion_StartDate="2000/1/1" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_DetectChanges="False" />
+      <UserProperties BuildVersion_DetectChanges="False" BuildVersion_AssemblyInfoFilename="Properties\AssemblyInfo.cs" BuildVersion_StartDate="2000/1/1" BuildVersion_UpdateFileVersion="True" BuildVersion_UpdateAssemblyVersion="True" BuildVersion_BuildVersioningStyle="None.None.Increment.DeltaBaseDateInDays" />
     </VisualStudio>
   </ProjectExtensions>
   <PropertyGroup>
