--- a/HmiPro/HmiPro.csproj
+++ b/HmiPro/HmiPro.csproj
@@ -162,12 +162,14 @@
     <Compile Include="Config\Models\MachineSetting.cs" />
     <Compile Include="Config\Models\Machine.cs" />
     <Compile Include="Config\Models\Setting.cs" />
+    <Compile Include="Controls\ItemsSourceHelper.cs" />
     <Compile Include="Controls\MarqueeTextControl.xaml.cs">
       <DependentUpon>MarqueeTextControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controls\Panels\DeviceDetector.cs" />
     <Compile Include="Controls\Panels\DpiResizingPanel.cs" />
     <Compile Include="Controls\Panels\FilterUnselectionBehavior.cs" />
+    <Compile Include="Controls\SampleSource.cs" />
     <Compile Include="Controls\TileLayoutControlExt.cs" />
     <Compile Include="Controls\ViewLoadingControl.xaml.cs">
       <DependentUpon>ViewLoadingControl.xaml</DependentUpon>
@@ -230,6 +232,7 @@
     <Compile Include="Redux\Models\ManuInfo.cs" />
     <Compile Include="Redux\Models\MqCall.cs" />
     <Compile Include="Redux\Models\AppCmd.cs" />
+    <Compile Include="Redux\Models\MqProcessCheck.cs" />
     <Compile Include="Redux\Models\MqUploadElec.cs" />
     <Compile Include="Redux\Models\MqUploadRest.cs" />
     <Compile Include="Redux\Models\MqUploadDpm.cs" />
@@ -273,12 +276,14 @@
     <Compile Include="ViewModels\DMes\Form\CompleteAxisForm.cs" />
     <Compile Include="ViewModels\DMes\Form\ConfirmEndMachine.cs" />
     <Compile Include="ViewModels\DMes\Form\PalletConfirmForm.cs" />
+    <Compile Include="ViewModels\DMes\Form\ProcessQi\ProcessLs.cs" />
     <Compile Include="ViewModels\DMes\Tab\AlarmTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\BaseTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\Com485Tab.cs" />
     <Compile Include="ViewModels\DMes\Tab\CpmDetailTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\CpmsTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\DpmsTab.cs" />
+    <Compile Include="ViewModels\DMes\Tab\ProcessQiTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\ScanMaterialTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\SchTaskTab.cs" />
     <Compile Include="ViewModels\DMes\Tab\WireOdPieTab.cs" />
@@ -341,6 +346,10 @@
     <Compile Include="Views\Sys\FormView.xaml.cs">
       <DependentUpon>FormView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Sys\LogView.xaml.cs">
+      <DependentUpon>LogView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModels\Sys\LogViewModel.cs" />
     <Compile Include="Views\Sys\NavigatorView.xaml.cs">
       <DependentUpon>NavigatorView.xaml</DependentUpon>
     </Compile>
@@ -434,6 +443,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\Sys\FormView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Sys\LogView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -821,6 +834,11 @@
   <ItemGroup>
     <None Include="Profiles\Assets\Images\worker.ico">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Profiles\Assets\Images\doc.ico">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
